# cmake_project_template

./: CMakeLists.txt
cmake/: vcpkg.cmake
cmake/Modules/: FindFFmpeg.cmake
